--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo-List</title>
+    <title>ListLinks - Simple todo linker</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/Codespaces/AdvanceTo-Do/style.css">
 </head>
 <body>
-    <h2>Todo List</h2>
+    <h2>ListLinks</h2>
     <form>
         <div class="inpButContainer">
             <input type="text" name="Input-Value" id="inputValue" placeholder="Type something..">
