--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ListLinks - Simple todo linker</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Codespaces/AdvanceTo-Do/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h2>ListLinks</h2>
@@ -27,6 +27,6 @@
         <span>, Checkbox</span>
         <span>and Content : Title, Priority, Deadline, Notes, Status and Actions</span>
     </div>
-    <script src="/Codespaces/AdvanceTo-Do/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
